--- a/Improved K-means algorithm based on density Canopy.ipynb
+++ b/Improved K-means algorithm based on density Canopy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,17 +10,21 @@
     "import numpy as np\n",
     "from time import time\n",
     "\n",
-    "from functools import reduce\n",
-    "\n",
     "from IPython.display import display\n",
     "\n",
     "from sklearn.cluster import KMeans\n",
-    "from sklearn.metrics.pairwise import pairwise_distances"
+    "from sklearn.metrics.pairwise import pairwise_distances\n",
+    "\n",
+    "from functools import reduce\n",
+    "\n",
+    "from sklearn.metrics import jaccard_score # scikit 0.21\n",
+    "from sklearn.metrics.cluster import adjusted_rand_score\n",
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +119,7 @@
     "\n",
     "#Definition 3\n",
     "def cluster_dist_mean(D, densities, meanDis):\n",
-    "    a = np.zeros(D.shape[0])\n",
+    "    inv_a = np.zeros(D.shape[0])\n",
     "    densities_aux = densities.copy()\n",
     "    for i, row_i in enumerate(D.values):\n",
     "        sum_dists = 0\n",
@@ -123,8 +127,8 @@
     "            dist = euclideanDistance(row_i, row_j)\n",
     "            if dist - meanDis < 0:\n",
     "                sum_dists += dist\n",
-    "        a[i] = 0 if sum_dists == 0 else (densities_aux[i]*(densities_aux[i]-1)) / 2 * sum_dists\n",
-    "    return a\n",
+    "        inv_a[i] = 0 if sum_dists == 0 else (densities_aux[i]*(densities_aux[i]-1)) / 2 * sum_dists\n",
+    "    return inv_a\n",
     "\n",
     "#Definition 4\n",
     "def clusters_dist(D, densities):\n",
@@ -153,10 +157,10 @@
     "    return s\n",
     "\n",
     "# Definition 6\n",
-    "def product_weight(p, a, s):\n",
+    "def product_weight(p, a, s): # a esta como 1/a do artigo\n",
     "    w = []\n",
     "    for i, row_i in enumerate(p):\n",
-    "        w.append(p[i] * (1/a[i]) * s[i])\n",
+    "        w.append(p[i] * (a[i]) * s[i])\n",
     "    return w\n",
     "        \n",
     "def getCluster(D, meanDis, index=None): \n",
@@ -164,8 +168,10 @@
     "    df = get_densities(D, meanDis)\n",
     "    if (index == None): #Primeira execução pega o de maior densidade\n",
     "        row_i = D.iloc[np.argmax(df)].values\n",
+    "        #print(np.argmax(df))\n",
     "    else:\n",
     "        row_i = D.iloc[index].values\n",
+    "        #print (index)\n",
     "    cluster = []\n",
     "    for j, row_j in enumerate(aux_D.values):\n",
     "        if euclideanDistance(row_i, row_j) - meanDis < 0:\n",
@@ -175,7 +181,7 @@
     "    #display(auxD)\n",
     "    return row_i, cluster #Elemento central e cluster\n",
     "\n",
-    "def removeOutliers(aux_D, densities, a, s, meanDis):\n",
+    "def removeOutliers(aux_D, densities, inv_a, s, meanDis):\n",
     "    #remove elemento com densidade = 1 e que o s[i] seja maior que o raio\n",
     "    outliers = []\n",
     "    for i, row_i in enumerate(aux_D.values):\n",
@@ -184,7 +190,7 @@
     "    aux_D.drop(outliers, inplace=True) #removendo outliers\n",
     "    aux_D.reset_index(drop=True, inplace=True)\n",
     "    densities = np.delete(densities, outliers, 0)\n",
-    "    a = np.delete(a, outliers, 0)\n",
+    "    inv_a = np.delete(inv_a, outliers, 0)\n",
     "    s = np.delete(s, outliers, 0)\n",
     "    return aux_D, densities, s\n",
     "\n",
@@ -198,6 +204,7 @@
     "    \n",
     "    # Step 1\n",
     "    meanDis = mean_dist(D)\n",
+    "    print (\"Distancia média: \", meanDis)\n",
     "    aux_D = D.copy()\n",
     "    center = remove_cluster(aux_D, meanDis)\n",
     "    centers = np.array([center])\n",
@@ -205,9 +212,9 @@
     "    # Step 2\n",
     "    meanDis = mean_dist(aux_D)\n",
     "    densities = get_densities(aux_D, meanDis)\n",
-    "    a = cluster_dist_mean(aux_D, densities, meanDis)\n",
+    "    inv_a = cluster_dist_mean(aux_D, densities, meanDis) #nome da variavel ALTERADO\n",
     "    s = clusters_dist(aux_D, densities)\n",
-    "    w_set = densities * a * s\n",
+    "    w_set = densities * inv_a * s #ALTERADO \n",
     "    aux_index = np.argmax(w_set)\n",
     "    center = remove_cluster(aux_D, meanDis, idx=aux_index)\n",
     "    center = np.array([center])\n",
@@ -217,25 +224,27 @@
     "    while(not aux_D.empty):\n",
     "        meanDis = mean_dist(aux_D)\n",
     "        densities = get_densities(aux_D, meanDis)\n",
-    "        a = cluster_dist_mean(aux_D, densities, meanDis)\n",
+    "        inv_a = cluster_dist_mean(aux_D, densities, meanDis)\n",
     "        s = clusters_dist(aux_D, densities)\n",
-    "        aux_D, densities, a = removeOutliers(aux_D, densities, a, s, meanDis)\n",
+    "        aux_D, densities, s = removeOutliers(aux_D, densities, inv_a, s, meanDis)\n",
     "        clusters_distance_matrix = pairwise_distances(aux_D, centers, metric='euclidean')\n",
     "        \n",
-    "        w_set = densities * a\n",
+    "        w_set = densities * s # ALTERAR?\n",
+    "        print (w_set)\n",
     "        for ids, row_i in enumerate(aux_D.values):\n",
     "            w_set[ids] = reduce(lambda x, y: x * y, clusters_distance_matrix[ids] * w_set[ids])\n",
     "        c_id = np.argmax(w_set.max())\n",
+    "        #print(\"elemento:\", w_set[c_id])\n",
     "        center = remove_cluster(aux_D, meanDis, idx=c_id)\n",
     "        aux_center = np.array([center])\n",
     "        centers = np.concatenate((centers, aux_center), axis=0)\n",
     "    return centers\n",
-    "#     print(\"KS:\", len(centers), centers)"
+    "#     print(\"KS:\", len(centers), centers)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -259,27 +268,53 @@
       "----- soybean-small -----\n",
       "\n",
       "(47, 36)\n",
-      "5\n",
+      "Distancia média:  5.1867052735002455\n",
+      "[4.47213595 4.89897949 8.48528137 9.        ]\n",
+      "[2.44948974 2.44948974]\n",
+      "[0]\n",
+      "centros: 5\n",
       "\n",
       "----- iris -----\n",
       "\n",
       "(150, 5)\n",
-      "6\n",
+      "Distancia média:  2.543769212251672\n",
+      "[ 3.          7.9598995   5.29150262  6.02494813  6.32455532  1.64924225\n",
+      "  2.06155281  4.4         1.58745079  4.26028168  2.77128129  2.64575131\n",
+      "  4.41588043 18.83878977  4.53541619  2.1       ]\n",
+      "[8.19756061 3.70405184 2.45560583 1.23693169 1.58745079 2.61533937\n",
+      " 1.38564065 4.25793377 0.82462113 3.23109888]\n",
+      "[1.28452326 1.28452326]\n",
+      "[0]\n",
+      "centros: 6\n",
       "\n",
       "----- wine -----\n",
       "\n",
       "(178, 14)\n",
-      "6\n",
+      "Distancia média:  17.46887795667206\n",
+      "[ 24.31008021  94.49201024  20.76342939  16.7199073   20.006334\n",
+      " 111.67116906  28.05275031  23.12046064  37.24140841  35.34443096]\n",
+      "[12.45805763 23.26870216  9.90876884 22.09026935 13.25416161]\n",
+      "[6.0127448 6.0127448]\n",
+      "[0]\n",
+      "centros: 6\n",
       "\n",
       "----- segmentation -----\n",
       "\n",
       "(210, 20)\n",
-      "3\n",
+      "Distancia média:  185.48742696079776\n",
+      "[3029.01333771 2454.9193316 ]\n",
+      "centros: 3\n",
       "\n",
       "----- ionosphere -----\n",
       "\n",
       "(351, 35)\n",
-      "5\n"
+      "Distancia média:  3.991880346182921\n",
+      "[33.04149083 39.972256   23.51497611 46.95742753 42.875      78.74007874\n",
+      " 61.5788975  51.54609588 42.86320174 29.78727091 36.98648402 34.99374944]\n",
+      "[14.09399251 16.2750108  31.2460749  30.5747036  14.13331734 18.49324201\n",
+      " 17.49687472]\n",
+      "[24.58693718 22.21803216 24.18677324]\n",
+      "centros: 5\n"
      ]
     }
    ],
@@ -297,31 +332,60 @@
     "            target = data.iloc[:,-1]\n",
     "            data = data.iloc[:,:-1]\n",
     "        centers = run(data)\n",
-    "        print(len(centers))\n",
-    "#         clustering_times = []\n",
-    "#         start = time()\n",
-    "#         k = ks[index]\n",
-    "#         kmeans = KMeans(n_clusters=k, random_state=100, init=kmeansType, n_init=1, max_iter=100).fit(data)\n",
+    "        print(\"centros:\", len(centers))\n",
+    "        \n",
+    "        clustering_times = []\n",
+    "        start = time()\n",
+    "        k = ks[index]\n",
+    "        kmeans = KMeans(n_clusters=k, random_state=100, init=kmeansType, n_init=1, max_iter=100).fit(data)\n",
     "        #display(data)\n",
-    "#         error = getSquaredError(data, kmeans)\n",
+    "        error = getSquaredError(data, kmeans)\n",
     "        #print(kmeans.labels_)\n",
-    "#         end = time()\n",
-    "#         T1 = error/(data.shape[0])\n",
-    "#         T2 = error/(data.shape[0]/2)\n",
+    "        end = time()\n",
+    "        T1 = error/(data.shape[0])\n",
+    "        T2 = error/(data.shape[0]/2)\n",
     "        \n",
     "        #print(canopy(data.values, T1, T2))\n",
     "        #print(\"Erro quadrático médio: \",error)\n",
-    "#         clustering_times.append(end - start)\n",
+    "        clustering_times.append(end - start)\n",
     "        #print(clustering_times)\n",
     "        #print(kmeans.cluster_centers_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.08829175  0.16364866]\n",
+      " [-0.10929439  0.03210554]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mu, sigma = 0, 0.1 \n",
+    "# creating a noise with the same dimension as the dataset (2,2) \n",
+    "noise = np.random.normal(mu, sigma, [2,2]) \n",
+    "print(noise)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "u A X = 0, u Y A = 0\n",
+    "σ x = σ y = 2\n",
+    "\n",
+    "u B X = 5, u Y B = 1\n",
+    "σ x = 1 , σ y = 2\n",
+    "\n",
+    "u C X = 5, u C Y = −2\n",
+    "σ x = σ y = 1"
+   ]
   }
  ],
  "metadata": {
@@ -340,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
