--- a/Improved K-means algorithm based on density Canopy.ipynb
+++ b/Improved K-means algorithm based on density Canopy.ipynb
@@ -128,6 +128,8 @@
     "            if dist - meanDis < 0:\n",
     "                sum_dists += dist\n",
     "        inv_a[i] = 0 if sum_dists == 0 else (densities_aux[i]*(densities_aux[i]-1)) / 2 * sum_dists\n",
+    "        \n",
+    "    #print (inv_a)\n",
     "    return inv_a\n",
     "\n",
     "#Definition 4\n",
@@ -136,7 +138,7 @@
     "    densities_aux = densities.copy()\n",
     "    for i, row_i in enumerate(D.values):\n",
     "        maxDist = 0\n",
-    "        minDist = float(\"inf\")\n",
+    "        minDist = np.inf\n",
     "        dist = 0\n",
     "        flag = 1 #Se flag=0 entao min dist, se flag=1 retornar max dist\n",
     "        for j, row_j in enumerate(D.values):\n",
@@ -154,6 +156,7 @@
     "            s.append(maxDist)\n",
     "        else: # p(j) > p(i)\n",
     "            s.append(minDist)\n",
+    "    #print (s)\n",
     "    return s\n",
     "\n",
     "# Definition 6\n",
@@ -192,52 +195,42 @@
     "    densities = np.delete(densities, outliers, 0)\n",
     "    inv_a = np.delete(inv_a, outliers, 0)\n",
     "    s = np.delete(s, outliers, 0)\n",
-    "    return aux_D, densities, s\n",
+    "    return aux_D, densities, inv_a, s\n",
     "\n",
     "def remove_cluster(D, meanDis, idx=None):\n",
     "    center, cluster = getCluster(D, meanDis, index=idx)\n",
     "    D.drop(cluster, inplace=True) #removendo cluster ja identificado\n",
     "    D.reset_index(drop=True, inplace=True)\n",
-    "    return center\n",
+    "    return center, D\n",
     "\n",
     "def run(D):\n",
     "    \n",
     "    # Step 1\n",
     "    meanDis = mean_dist(D)\n",
-    "    print (\"Distancia média: \", meanDis)\n",
+    "    #print (\"Distancia média: \", meanDis)\n",
     "    aux_D = D.copy()\n",
-    "    center = remove_cluster(aux_D, meanDis)\n",
+    "    center, aux_D = remove_cluster(aux_D, meanDis)\n",
     "    centers = np.array([center])\n",
     "    \n",
     "    # Step 2\n",
-    "    meanDis = mean_dist(aux_D)\n",
-    "    densities = get_densities(aux_D, meanDis)\n",
-    "    inv_a = cluster_dist_mean(aux_D, densities, meanDis) #nome da variavel ALTERADO\n",
-    "    s = clusters_dist(aux_D, densities)\n",
-    "    w_set = densities * inv_a * s #ALTERADO \n",
-    "    aux_index = np.argmax(w_set)\n",
-    "    center = remove_cluster(aux_D, meanDis, idx=aux_index)\n",
-    "    center = np.array([center])\n",
-    "    centers = np.concatenate((centers, center), axis=0)\n",
+    "    while(aux_D.shape[0] > 1):\n",
     "    \n",
-    "    # Step 3\n",
-    "    while(not aux_D.empty):\n",
     "        meanDis = mean_dist(aux_D)\n",
     "        densities = get_densities(aux_D, meanDis)\n",
-    "        inv_a = cluster_dist_mean(aux_D, densities, meanDis)\n",
+    "        inv_a = cluster_dist_mean(aux_D, densities, meanDis) #nome da variavel ALTERADO\n",
     "        s = clusters_dist(aux_D, densities)\n",
-    "        aux_D, densities, s = removeOutliers(aux_D, densities, inv_a, s, meanDis)\n",
-    "        clusters_distance_matrix = pairwise_distances(aux_D, centers, metric='euclidean')\n",
+    "        aux_D, densities, inv_a, s = removeOutliers(aux_D, densities, inv_a, s, meanDis)\n",
+    "    \n",
+    "        w_set = densities * inv_a * s #ALTERADO \n",
+    "        aux_index = np.argmax(w_set)\n",
+    "        center, aux_D = remove_cluster(aux_D, meanDis, idx=aux_index)\n",
+    "        center = np.array([center])\n",
+    "        centers = np.concatenate((centers, center), axis=0)\n",
+    "    \n",
+    "    if (aux_D.shape[0] ==1):\n",
+    "        center = np.array([aux_D.iloc[0]])\n",
+    "        centers = np.concatenate((centers, center), axis=0)\n",
     "        \n",
-    "        w_set = densities * s # ALTERAR?\n",
-    "        print (w_set)\n",
-    "        for ids, row_i in enumerate(aux_D.values):\n",
-    "            w_set[ids] = reduce(lambda x, y: x * y, clusters_distance_matrix[ids] * w_set[ids])\n",
-    "        c_id = np.argmax(w_set.max())\n",
-    "        #print(\"elemento:\", w_set[c_id])\n",
-    "        center = remove_cluster(aux_D, meanDis, idx=c_id)\n",
-    "        aux_center = np.array([center])\n",
-    "        centers = np.concatenate((centers, aux_center), axis=0)\n",
     "    return centers\n",
     "#     print(\"KS:\", len(centers), centers)\n"
    ]
@@ -268,53 +261,27 @@
       "----- soybean-small -----\n",
       "\n",
       "(47, 36)\n",
-      "Distancia média:  5.1867052735002455\n",
-      "[4.47213595 4.89897949 8.48528137 9.        ]\n",
-      "[2.44948974 2.44948974]\n",
-      "[0]\n",
-      "centros: 5\n",
+      "centros: 3\n",
       "\n",
       "----- iris -----\n",
       "\n",
       "(150, 5)\n",
-      "Distancia média:  2.543769212251672\n",
-      "[ 3.          7.9598995   5.29150262  6.02494813  6.32455532  1.64924225\n",
-      "  2.06155281  4.4         1.58745079  4.26028168  2.77128129  2.64575131\n",
-      "  4.41588043 18.83878977  4.53541619  2.1       ]\n",
-      "[8.19756061 3.70405184 2.45560583 1.23693169 1.58745079 2.61533937\n",
-      " 1.38564065 4.25793377 0.82462113 3.23109888]\n",
-      "[1.28452326 1.28452326]\n",
-      "[0]\n",
-      "centros: 6\n",
+      "centros: 3\n",
       "\n",
       "----- wine -----\n",
       "\n",
       "(178, 14)\n",
-      "Distancia média:  17.46887795667206\n",
-      "[ 24.31008021  94.49201024  20.76342939  16.7199073   20.006334\n",
-      " 111.67116906  28.05275031  23.12046064  37.24140841  35.34443096]\n",
-      "[12.45805763 23.26870216  9.90876884 22.09026935 13.25416161]\n",
-      "[6.0127448 6.0127448]\n",
-      "[0]\n",
-      "centros: 6\n",
+      "centros: 4\n",
       "\n",
       "----- segmentation -----\n",
       "\n",
       "(210, 20)\n",
-      "Distancia média:  185.48742696079776\n",
-      "[3029.01333771 2454.9193316 ]\n",
       "centros: 3\n",
       "\n",
       "----- ionosphere -----\n",
       "\n",
       "(351, 35)\n",
-      "Distancia média:  3.991880346182921\n",
-      "[33.04149083 39.972256   23.51497611 46.95742753 42.875      78.74007874\n",
-      " 61.5788975  51.54609588 42.86320174 29.78727091 36.98648402 34.99374944]\n",
-      "[14.09399251 16.2750108  31.2460749  30.5747036  14.13331734 18.49324201\n",
-      " 17.49687472]\n",
-      "[24.58693718 22.21803216 24.18677324]\n",
-      "centros: 5\n"
+      "centros: 7\n"
      ]
     }
    ],
@@ -361,8 +328,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.08829175  0.16364866]\n",
-      " [-0.10929439  0.03210554]]\n"
+      "[[-0.14933942 -0.03070734]\n",
+      " [-0.0263372  -0.08132291]]\n"
      ]
     }
    ],
