--- a/Improved K-means algorithm based on density Canopy.ipynb
+++ b/Improved K-means algorithm based on density Canopy.ipynb
@@ -192,7 +192,7 @@
     "    densities = np.delete(densities, outliers, 0)\n",
     "    inv_a = np.delete(inv_a, outliers, 0)\n",
     "    s = np.delete(s, outliers, 0)\n",
-    "    return aux_D, densities, s\n",
+    "    return aux_D, densities, inv_a, s\n",
     "\n",
     "def remove_cluster(D, meanDis, idx=None):\n",
     "    center, cluster = getCluster(D, meanDis, index=idx)\n",
@@ -226,10 +226,10 @@
     "        densities = get_densities(aux_D, meanDis)\n",
     "        inv_a = cluster_dist_mean(aux_D, densities, meanDis)\n",
     "        s = clusters_dist(aux_D, densities)\n",
-    "        aux_D, densities, s = removeOutliers(aux_D, densities, inv_a, s, meanDis)\n",
+    "        aux_D, densities, inv_a, s = removeOutliers(aux_D, densities, inv_a, s, meanDis)\n",
     "        clusters_distance_matrix = pairwise_distances(aux_D, centers, metric='euclidean')\n",
     "        \n",
-    "        w_set = densities * s # ALTERAR?\n",
+    "        w_set = densities * inv_a # ALTERAR?\n",
     "        print (w_set)\n",
     "        for ids, row_i in enumerate(aux_D.values):\n",
     "            w_set[ids] = reduce(lambda x, y: x * y, clusters_distance_matrix[ids] * w_set[ids])\n",
@@ -404,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
