sem recalcular media

--- a/Improved K-means algorithm based on density Canopy.ipynb
+++ b/Improved K-means algorithm based on density Canopy.ipynb
@@ -101,6 +101,7 @@
     "def mean_dist(D):\n",
     "    n = D.shape[0]\n",
     "    D = D.values\n",
+    "    \n",
     "    sum_D = np.zeros((n, n))\n",
     "    for i, row_i in enumerate(D):\n",
     "        for j, row_j in enumerate(D[i+1:,]):\n",
@@ -187,8 +188,9 @@
     "def removeOutliers(aux_D, densities, inv_a, s, meanDis):\n",
     "    #remove elemento com densidade = 1 e que o s[i] seja maior que o raio\n",
     "    outliers = []\n",
+    "    #print (aux_D.std(axis=0).mean())\n",
     "    for i, row_i in enumerate(aux_D.values):\n",
-    "        if densities[i] == 1 and s[i] > meanDis:\n",
+    "        if densities[i] == 1 and (s[i] > meanDis   ) :\n",
     "            outliers.append(i)\n",
     "    aux_D.drop(outliers, inplace=True) #removendo outliers\n",
     "    aux_D.reset_index(drop=True, inplace=True)\n",
@@ -199,6 +201,7 @@
     "\n",
     "def remove_cluster(D, meanDis, idx=None):\n",
     "    center, cluster = getCluster(D, meanDis, index=idx)\n",
+    "    print (len(cluster))\n",
     "    D.drop(cluster, inplace=True) #removendo cluster ja identificado\n",
     "    D.reset_index(drop=True, inplace=True)\n",
     "    return center, D\n",
@@ -214,8 +217,8 @@
     "    \n",
     "    # Step 2\n",
     "    while(aux_D.shape[0] > 1):\n",
-    "    \n",
-    "        meanDis = mean_dist(aux_D)\n",
+    "        #print (\"Aqui\")\n",
+    "        #meanDis = mean_dist(aux_D)\n",
     "        densities = get_densities(aux_D, meanDis)\n",
     "        inv_a = cluster_dist_mean(aux_D, densities, meanDis) #nome da variavel ALTERADO\n",
     "        s = clusters_dist(aux_D, densities)\n",
@@ -261,27 +264,58 @@
       "----- soybean-small -----\n",
       "\n",
       "(47, 36)\n",
-      "centros: 4\n",
+      "33\n",
+      "10\n",
+      "4\n",
+      "(47, 35)\n",
+      "centros: 3\n",
       "\n",
       "----- iris -----\n",
       "\n",
       "(150, 5)\n",
-      "centros: 4\n",
+      "110\n",
+      "24\n",
+      "16\n",
+      "(150, 4)\n",
+      "centros: 3\n",
       "\n",
       "----- wine -----\n",
       "\n",
       "(178, 14)\n",
+      "136\n",
+      "32\n",
+      "10\n",
+      "(178, 13)\n",
       "centros: 3\n",
       "\n",
       "----- segmentation -----\n",
       "\n",
-      "(210, 20)\n",
-      "centros: 4\n",
+      "(2310, 20)\n",
+      "2006\n",
+      "169\n",
+      "103\n",
+      "9\n",
+      "3\n",
+      "3\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "(2310, 19)\n",
+      "centros: 10\n",
       "\n",
       "----- ionosphere -----\n",
       "\n",
       "(351, 35)\n",
-      "centros: 5\n"
+      "286\n",
+      "7\n",
+      "5\n",
+      "3\n",
+      "3\n",
+      "2\n",
+      "2\n",
+      "(351, 34)\n",
+      "centros: 7\n"
      ]
     }
    ],
@@ -292,13 +326,15 @@
     "        print (\"\\n----- \"+file+\" -----\\n\")\n",
     "        data = pd.read_csv(\"datasets/\"+file+\".data\", header=None)\n",
     "        print (data.shape)\n",
-    "        if file == \"segmentation\": #Target eh na primeira coluna\n",
+    "        if file == \"segmentation\" or file == \"wine\": #Target eh na primeira coluna\n",
     "            target = data.iloc[:,0]\n",
-    "            data = data.iloc[:,1:]   \n",
+    "            data = data.iloc[:,1:]\n",
+    "        \n",
     "        else: #Target na última coluna\n",
     "            target = data.iloc[:,-1]\n",
     "            data = data.iloc[:,:-1]\n",
     "        centers = run(data)\n",
+    "        print (data.shape)\n",
     "        print(\"centros:\", len(centers))\n",
     "        \n",
     "        clustering_times = []\n",
@@ -328,8 +364,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.03053165 -0.20065645]\n",
-      " [-0.04186441  0.12863094]]\n"
+      "[[ 0.01628421  0.01389458]\n",
+      " [ 0.11397378 -0.18474262]]\n"
      ]
     }
    ],
