--- a/Improved K-means algorithm based on density Canopy.ipynb
+++ b/Improved K-means algorithm based on density Canopy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
     "from sklearn.cluster import KMeans\n",
     "from sklearn.metrics.pairwise import pairwise_distances\n",
     "\n",
-    "#from sklearn.metrics import jaccard_score # scikit 0.21\n",
+    "# from sklearn.metrics import jaccard_score # scikit 0.21\n",
     "from sklearn.metrics.cluster import adjusted_rand_score\n",
     "from sklearn.metrics import accuracy_score"
    ]
@@ -57,6 +57,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 400,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getMetrics(y_true, y_pred):\n",
+    "    y_true = y_true.map({\"D1\": 0, \"D2\": 1, \"D3\": 2, \"D4\": 3,\"b\":0, \"g\":1, \"1\": 0, \"2\": 1, \"3\": 2, \"Iris-setosa\": 0, \"Iris-versicolor\": 1, \"Iris-virginica\": 2})\n",
+    "\n",
+    "#     print(jaccard_score(y_true, y_pred, average=\"weighted\"))    \n",
+    "    print(adjusted_rand_score(y_true, y_pred))\n",
+    "    print(accuracy_score(y_true, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 310,
    "metadata": {},
    "outputs": [],
@@ -84,6 +98,101 @@
     "    distances = np.asarray(distances)\n",
     "    error = np.sum(distances)\n",
     "    return error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 350,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = [\"soybean-small\", \"iris\", \"wine\", \"segmentation\", \"ionosphere\"]\n",
+    "ks = [4,3,3,7,2]\n",
+    "kmeansTypes = [\"random\", \"k-means++\", \"densityCanopy\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 377,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = files[0]\n",
+    "k = ks[0]\n",
+    "\n",
+    "data = pd.read_csv(\"datasets/\"+file+\".data\", header=None)\n",
+    "if file == \"segmentation\" or file == \"wine\": #Target eh na primeira coluna\n",
+    "    target = data.iloc[:,0]\n",
+    "    data = data.iloc[:,1:]\n",
+    "else: #Target na última coluna\n",
+    "    target = data.iloc[:,-1]\n",
+    "    data = data.iloc[:,:-1]\n",
+    "\n",
+    "data = data.values\n",
+    "distance_matrix = pairwise_distances(data, metric='euclidean')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 392,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run():\n",
+    "    # demo_data = np.random.random_sample((2000, 5))\n",
+    "    # print(demo_data.shape)\n",
+    "#     data = auxData\n",
+    "#     demo_data = data.values\n",
+    "    clustering_time = []\n",
+    "    clustering_error = []\n",
+    "\n",
+    "    for kmeansType in kmeansTypes:\n",
+    "        start = time()\n",
+    "        if kmeansType == \"densityCanopy\":\n",
+    "            centers = np.asarray(densityCanopy())\n",
+    "            l = len(centers)\n",
+    "            kmeans = KMeans(n_clusters=l, random_state=100, init=centers, n_init=1, max_iter=100).fit(data)\n",
+    "        else:\n",
+    "            kmeans = KMeans(n_clusters=k, random_state=100, init=kmeansType, n_init=1, max_iter=100).fit(data)\n",
+    "        \n",
+    "        getMetrics(target, kmeans.labels_)\n",
+    "\n",
+    "        error = getSquaredError(data, kmeans, k)\n",
+    "        clustering_error.append(error)\n",
+    "        #print(\"Erro:\", error)\n",
+    "\n",
+    "        end = time()\n",
+    "        clustering_time.append(end - start)\n",
+    "\n",
+    "    print (\"\\n---Tempos---\")\n",
+    "    print (\"random: \", clustering_time[0], \" kmeans++: \", clustering_time[1], \" densityCanopy: \", clustering_time[2])\n",
+    "    \n",
+    "    print (\"\\n---Erros---\")\n",
+    "    print (\"random: \", clustering_error[0], \"kmeans++: \", clustering_error[1], \" densityCanopy: \", clustering_error[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 401,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "---Tempos---\n",
+      "random:  0.002682209014892578  kmeans++:  0.006242990493774414  densityCanopy:  0.004130125045776367\n",
+      "\n",
+      "---Erros---\n",
+      "random:  100.72984563120583 kmeans++:  96.99203638192614  densityCanopy:  103.90193746707101\n",
+      "0.6024288940964433\n",
+      "0.2127659574468085\n"
+     ]
+    }
+   ],
+   "source": [
+    "run()"
    ]
   },
   {
@@ -194,11 +303,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def densityCanopy(data, distance_matrix):\n",
+    "def densityCanopy():\n",
+    "    print (\"\\n----- \"+file+\" -----\")\n",
     "    centers = []\n",
     "    db = data.copy()\n",
     "    d_matrix = distance_matrix.copy()\n",
@@ -242,216 +352,6 @@
     "        centers.append(db[0])\n",
     "    \n",
     "    return centers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 328,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def run():\n",
-    "    # demo_data = np.random.random_sample((2000, 5))\n",
-    "    # print(demo_data.shape)\n",
-    "#     data = auxData\n",
-    "#     demo_data = data.values\n",
-    "    \n",
-    "    files = [\"soybean-small\", \"iris\", \"wine\", \"segmentation\", \"ionosphere\"]\n",
-    "    ks = [4,3,3,7,2]\n",
-    "    kmeansTypes = [\"random\", \"k-means++\", \"densityCanopy\"]\n",
-    "    \n",
-    "    for kmeansType in kmeansTypes:\n",
-    "        print (\"--------- \"+ kmeansType +\" test ---------\")\n",
-    "        \n",
-    "        for index, file in enumerate(files):\n",
-    "            clustering_time = []\n",
-    "            clustering_error = []\n",
-    "            print (\"\\n----- \"+file+\" -----\\n\")\n",
-    "            data = pd.read_csv(\"datasets/\"+file+\".data\", header=None)\n",
-    "            if file == \"segmentation\" or file == \"wine\": #Target eh na primeira coluna\n",
-    "                target = data.iloc[:,0]\n",
-    "                data = data.iloc[:,1:]\n",
-    "            else: #Target na última coluna\n",
-    "                target = data.iloc[:,-1]\n",
-    "                data = data.iloc[:,:-1]\n",
-    "            data = data.values\n",
-    "            distance_matrix = pairwise_distances(data, metric='euclidean')\n",
-    "            k = ks[index]\n",
-    "\n",
-    "            start = time()\n",
-    "            if kmeansType == \"densityCanopy\":\n",
-    "                centers = np.asarray(densityCanopy(data, distance_matrix))\n",
-    "                l = len(centers)\n",
-    "                kmeans = KMeans(n_clusters=l, random_state=100, init=centers, n_init=1, max_iter=100).fit(data)\n",
-    "            else:\n",
-    "                kmeans = KMeans(n_clusters=k, random_state=100, init=kmeansType, n_init=10, max_iter=100).fit(data)\n",
-    "\n",
-    "            error = getSquaredError(data, kmeans, k)\n",
-    "            clustering_error.append(error)\n",
-    "            #print(\"Erro:\", error)\n",
-    "\n",
-    "            end = time()\n",
-    "            clustering_time.append(end - start)\n",
-    "\n",
-    "            print (\"\\n---Tempos---\")\n",
-    "            print (\"\" + kmeansType, clustering_time[0])\n",
-    "\n",
-    "            print (\"\\n---Erros---\")\n",
-    "            print (\"\" + kmeansType, clustering_error[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 329,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--------- random test ---------\n",
-      "\n",
-      "----- soybean-small -----\n",
-      "\n",
-      "\n",
-      "---Tempos---\n",
-      "random 0.013199329376220703\n",
-      "\n",
-      "---Erros---\n",
-      "random 96.99203638192614\n",
-      "\n",
-      "----- iris -----\n",
-      "\n",
-      "\n",
-      "---Tempos---\n",
-      "random 0.024935007095336914\n",
-      "\n",
-      "---Erros---\n",
-      "random 97.32592423430009\n",
-      "\n",
-      "----- wine -----\n",
-      "\n",
-      "\n",
-      "---Tempos---\n",
-      "random 0.031957149505615234\n",
-      "\n",
-      "---Erros---\n",
-      "random 16555.679416032723\n",
-      "\n",
-      "----- segmentation -----\n",
-      "\n",
-      "\n",
-      "---Tempos---\n",
-      "random 0.1558551788330078\n",
-      "\n",
-      "---Erros---\n",
-      "random 150225.55247187975\n",
-      "\n",
-      "----- ionosphere -----\n",
-      "\n",
-      "\n",
-      "---Tempos---\n",
-      "random 0.01795196533203125\n",
-      "\n",
-      "---Erros---\n",
-      "random 796.4666759281233\n",
-      "--------- k-means++ test ---------\n",
-      "\n",
-      "----- soybean-small -----\n",
-      "\n",
-      "\n",
-      "---Tempos---\n",
-      "k-means++ 0.015027999877929688\n",
-      "\n",
-      "---Erros---\n",
-      "k-means++ 96.99203638192614\n",
-      "\n",
-      "----- iris -----\n",
-      "\n",
-      "\n",
-      "---Tempos---\n",
-      "k-means++ 0.01749110221862793\n",
-      "\n",
-      "---Erros---\n",
-      "k-means++ 97.32592423430009\n",
-      "\n",
-      "----- wine -----\n",
-      "\n",
-      "\n",
-      "---Tempos---\n",
-      "k-means++ 0.019376039505004883\n",
-      "\n",
-      "---Erros---\n",
-      "k-means++ 16555.679416032723\n",
-      "\n",
-      "----- segmentation -----\n",
-      "\n",
-      "\n",
-      "---Tempos---\n",
-      "k-means++ 0.1493971347808838\n",
-      "\n",
-      "---Erros---\n",
-      "k-means++ 156080.0905760258\n",
-      "\n",
-      "----- ionosphere -----\n",
-      "\n",
-      "\n",
-      "---Tempos---\n",
-      "k-means++ 0.021095991134643555\n",
-      "\n",
-      "---Erros---\n",
-      "k-means++ 796.4666759281233\n",
-      "--------- densityCanopy test ---------\n",
-      "\n",
-      "----- soybean-small -----\n",
-      "\n",
-      "\n",
-      "---Tempos---\n",
-      "densityCanopy 0.0030350685119628906\n",
-      "\n",
-      "---Erros---\n",
-      "densityCanopy 103.90193746707101\n",
-      "\n",
-      "----- iris -----\n",
-      "\n",
-      "\n",
-      "---Tempos---\n",
-      "densityCanopy 0.007547855377197266\n",
-      "\n",
-      "---Erros---\n",
-      "densityCanopy 58.42514921198676\n",
-      "\n",
-      "----- wine -----\n",
-      "\n",
-      "\n",
-      "---Tempos---\n",
-      "densityCanopy 0.00818490982055664\n",
-      "\n",
-      "---Erros---\n",
-      "densityCanopy 8165.137466678483\n",
-      "\n",
-      "----- segmentation -----\n",
-      "\n",
-      "\n",
-      "---Tempos---\n",
-      "densityCanopy 0.14105987548828125\n",
-      "\n",
-      "---Erros---\n",
-      "densityCanopy 223137.8633891923\n",
-      "\n",
-      "----- ionosphere -----\n",
-      "\n",
-      "\n",
-      "---Tempos---\n",
-      "densityCanopy 0.02600693702697754\n",
-      "\n",
-      "---Erros---\n",
-      "densityCanopy 510.9547367502945\n"
-     ]
-    }
-   ],
-   "source": [
-    "run()"
    ]
   },
   {
