--- a/Improved K-means algorithm based on density Canopy.ipynb
+++ b/Improved K-means algorithm based on density Canopy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,14 +15,14 @@
     "from sklearn.cluster import KMeans\n",
     "from sklearn.metrics.pairwise import pairwise_distances\n",
     "\n",
-    "# from sklearn.metrics import jaccard_score # scikit 0.21\n",
+    "from sklearn.metrics import jaccard_score # scikit 0.21\n",
     "from sklearn.metrics.cluster import adjusted_rand_score\n",
     "from sklearn.metrics import accuracy_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,21 +57,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def getMetrics(y_true, y_pred):\n",
-    "    y_true = y_true.map({\"D1\": 0, \"D2\": 1, \"D3\": 2, \"D4\": 3,\"b\":0, \"g\":1, \"1\": 0, \"2\": 1, \"3\": 2, \"Iris-setosa\": 0, \"Iris-versicolor\": 1, \"Iris-virginica\": 2})\n",
-    "\n",
-    "#     print(jaccard_score(y_true, y_pred, average=\"weighted\"))    \n",
-    "    print(adjusted_rand_score(y_true, y_pred))\n",
-    "    print(accuracy_score(y_true, y_pred))"
+    "    y_true = y_true.map({\"D1\": 0, \"D2\": 1, \"D3\": 2, \"D4\": 3,\"b\":0, \"g\":1, 1: 0, 2: 1, 3: 2, \"Iris-setosa\": 0, \"Iris-versicolor\": 1, \"Iris-virginica\": 2})\n",
+    "    \n",
+    "    #print(y_true)\n",
+    "    print(\"Jaccard: \", jaccard_score(y_true, y_pred, average=\"macro\"))    \n",
+    "    print(\"AdjustedRandIndex: \",adjusted_rand_score(y_true, y_pred))\n",
+    "    print(\"Accuracy: \",accuracy_score(y_true, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,12 +114,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = files[0]\n",
-    "k = ks[0]\n",
+    "file = files[4]\n",
+    "k = ks[4]\n",
+    "\n",
     "\n",
     "data = pd.read_csv(\"datasets/\"+file+\".data\", header=None)\n",
     "if file == \"segmentation\" or file == \"wine\": #Target eh na primeira coluna\n",
@@ -134,70 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def run():\n",
-    "    # demo_data = np.random.random_sample((2000, 5))\n",
-    "    # print(demo_data.shape)\n",
-    "#     data = auxData\n",
-    "#     demo_data = data.values\n",
-    "    clustering_time = []\n",
-    "    clustering_error = []\n",
-    "\n",
-    "    for kmeansType in kmeansTypes:\n",
-    "        start = time()\n",
-    "        if kmeansType == \"densityCanopy\":\n",
-    "            centers = np.asarray(densityCanopy())\n",
-    "            l = len(centers)\n",
-    "            kmeans = KMeans(n_clusters=l, random_state=100, init=centers, n_init=1, max_iter=100).fit(data)\n",
-    "        else:\n",
-    "            kmeans = KMeans(n_clusters=k, random_state=100, init=kmeansType, n_init=1, max_iter=100).fit(data)\n",
-    "        \n",
-    "        getMetrics(target, kmeans.labels_)\n",
-    "\n",
-    "        error = getSquaredError(data, kmeans, k)\n",
-    "        clustering_error.append(error)\n",
-    "        #print(\"Erro:\", error)\n",
-    "\n",
-    "        end = time()\n",
-    "        clustering_time.append(end - start)\n",
-    "\n",
-    "    print (\"\\n---Tempos---\")\n",
-    "    print (\"random: \", clustering_time[0], \" kmeans++: \", clustering_time[1], \" densityCanopy: \", clustering_time[2])\n",
-    "    \n",
-    "    print (\"\\n---Erros---\")\n",
-    "    print (\"random: \", clustering_error[0], \"kmeans++: \", clustering_error[1], \" densityCanopy: \", clustering_error[2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 401,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "---Tempos---\n",
-      "random:  0.002682209014892578  kmeans++:  0.006242990493774414  densityCanopy:  0.004130125045776367\n",
-      "\n",
-      "---Erros---\n",
-      "random:  100.72984563120583 kmeans++:  96.99203638192614  densityCanopy:  103.90193746707101\n",
-      "0.6024288940964433\n",
-      "0.2127659574468085\n"
-     ]
-    }
-   ],
-   "source": [
-    "run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,37 +295,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run():\n",
+    "    # demo_data = np.random.random_sample((2000, 5))\n",
+    "    # print(demo_data.shape)\n",
+    "#     data = auxData\n",
+    "#     demo_data = data.values\n",
+    "    clustering_time = []\n",
+    "    clustering_error = []\n",
+    "    \n",
+    "    #print(target)\n",
+    "\n",
+    "    for kmeansType in kmeansTypes:\n",
+    "        start = time()\n",
+    "        if kmeansType == \"densityCanopy\":\n",
+    "            centers = np.asarray(densityCanopy())\n",
+    "            l = len(centers)\n",
+    "            kmeans = KMeans(n_clusters=l, init=centers, n_init=1, max_iter=100).fit(data)\n",
+    "        else:\n",
+    "            kmeans = KMeans(n_clusters=k, random_state=200, init=kmeansType, n_init=1, max_iter=100).fit(data)\n",
+    "        \n",
+    "\n",
+    "        getMetrics(target, kmeans.labels_)\n",
+    "        #print(kmeans.labels_)\n",
+    "        error = getSquaredError(data, kmeans, k)\n",
+    "        clustering_error.append(error)\n",
+    "        #print(\"Erro:\", error)\n",
+    "\n",
+    "        end = time()\n",
+    "        clustering_time.append(end - start)\n",
+    "\n",
+    "    print (\"\\n---Tempos---\")\n",
+    "    print (\"random: \", clustering_time[0], \" kmeans++: \", clustering_time[1], \" densityCanopy: \", clustering_time[2])\n",
+    "    \n",
+    "    print (\"\\n---Erros---\")\n",
+    "    print (\"random: \", clustering_error[0], \"kmeans++: \", clustering_error[1], \" densityCanopy: \", clustering_error[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.09386941  0.07403991]\n",
-      " [-0.10084067  0.18505222]]\n"
+      "Jaccard:  0.5439542875409574\n",
+      "AdjustedRandIndex:  0.177606854737686\n",
+      "Accuracy:  0.7122507122507122\n",
+      "Jaccard:  0.5439542875409574\n",
+      "AdjustedRandIndex:  0.177606854737686\n",
+      "Accuracy:  0.7122507122507122\n",
+      "\n",
+      "----- ionosphere -----\n",
+      "Jaccard:  0.03335789732252518\n",
+      "AdjustedRandIndex:  0.2641569581391015\n",
+      "Accuracy:  0.1339031339031339\n",
+      "\n",
+      "---Tempos---\n",
+      "random:  0.0947873592376709  kmeans++:  0.019890546798706055  densityCanopy:  0.031907081604003906\n",
+      "\n",
+      "---Erros---\n",
+      "random:  796.4666759281233 kmeans++:  796.4666759281233  densityCanopy:  510.9547367502945\n"
      ]
     }
    ],
    "source": [
-    "mu, sigma = 0, 0.1 \n",
-    "# creating a noise with the same dimension as the dataset (2,2) \n",
-    "noise = np.random.normal(mu, sigma, [2,2]) \n",
-    "print(noise)"
+    "run()"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "u A X = 0, u Y A = 0\n",
-    "σ x = σ y = 2\n",
+    "files = [\"soybean-small\", \"iris\", \"wine\", \"segmentation\", \"ionosphere\"]\n",
+    "ks = [4,3,3,7,2]\n",
+    "kmeansTypes = [\"random\", \"k-means++\", \"densityCanopy\"]\n",
     "\n",
-    "u B X = 5, u Y B = 1\n",
-    "σ x = 1 , σ y = 2\n",
+    "file = files[4]\n",
+    "k = ks[4]\n",
     "\n",
-    "u C X = 5, u C Y = −2\n",
-    "σ x = σ y = 1"
+    "mu, sigma = 5, 1\n",
+    "\n",
+    "#display(data)\n",
+    "data = pd.read_csv(\"datasets/\"+file+\".data\", header=None)\n",
+    "if file == \"segmentation\" or file == \"wine\": #Target eh na primeira coluna\n",
+    "    target = data.iloc[:,0]\n",
+    "    data = data.iloc[:,1:]\n",
+    "else: #Target na última coluna\n",
+    "    target = data.iloc[:,-1]\n",
+    "    data = data.iloc[:,:-1]\n",
+    "\n",
+    "noise = np.random.normal(mu, sigma, [data.shape[0], data.shape[1]])\n",
+    "\n",
+    "data = data + noise\n",
+    "#display(data)\n",
+    "data = data.values\n",
+    "distance_matrix = pairwise_distances(data, metric='euclidean')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jaccard:  0.490059492431659\n",
+      "AdjustedRandIndex:  0.11116127414095801\n",
+      "Accuracy:  0.6695156695156695\n",
+      "Jaccard:  0.45841283301533464\n",
+      "AdjustedRandIndex:  0.07074025843934692\n",
+      "Accuracy:  0.6353276353276354\n",
+      "\n",
+      "----- ionosphere -----\n",
+      "Jaccard:  0.17258516952597772\n",
+      "AdjustedRandIndex:  0.03474981743401371\n",
+      "Accuracy:  0.4472934472934473\n",
+      "\n",
+      "---Tempos---\n",
+      "random:  0.03872227668762207  kmeans++:  0.030219078063964844  densityCanopy:  0.024511098861694336\n",
+      "\n",
+      "---Erros---\n",
+      "random:  2188.2913265121388 kmeans++:  2188.1790236431525  densityCanopy:  1548.2715921412168\n"
+     ]
+    }
+   ],
+   "source": [
+    "run()"
    ]
   },
   {
@@ -413,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
